Fix overflow horizontal : hidden

--- a/assets/css/media-queries.css
+++ b/assets/css/media-queries.css
@@ -1,71 +1,147 @@
-    /* Estilos para dispositivos muy pequeños 
+/* Estilos para dispositivos muy pequeños
 @media (max-width:300px){
-    /* .container-tv{
+    .container-tv{
         height: 90%;
-    } */
-
-    /* .tv-video {
+    }
+    .tv-image {
+        width: 100%;
+        content:url("/assets/images/web\ template\ Tele\ sola.png");
+    }
+    .tv-video {
         top: 9%;
         left: 8%;
         width: 69%;
         height: 69%;
-    } */
-      /* .tv-image {
-      OJO mantener esta relacion porcentaje vw para tener responsive la tv con el video 
-        height: 80%;
-        width: 70vw;
-         content:url("/assets/images/web\ template\ Tele\ sola2.png");
     }
 
     .logo{
-     display:none;
+        display:none;
     }
-
+    
 }
 
     /* Estilos para celulares en modo vertical */
- /*@media (min-width: 300px){
-    /* .container-tv{
+    /* @media (min-width: 300px){
+    .container-tv{
         height: 65%;
-    } */
-    /* .tv-image {
+    }
+    .tv-image {
         width: 100%;
         content:url("/assets/images/web\ template\ Tele\ 1024px-RECORTEBORDES.png");
-    }*/
-    /* .tv-video {
+    }
+    .tv-video {
         top: 5%;
         left: 6%;
         width: 71%;
         height: 37%;
-    } 
-
-    .body{
-        background-image: url(/assets/images/Fondo-Vertical-1024x960.png);
-        background-size:100% 100%;
-        
     }
-    .container-tv{
-        bottom: 25vw;/*Dejo distancia desde abajo hacia arriba para acomodar tv
-      } 
-      .tv-image {
-         
-          width: 80vh; /* relaciono el el ancho con el alto, el ancho esta determinado por el alto 
-          max-width:  80vw;  para que no se pase del tamaño      
-         
-      }
+
     .logo{
         font-size: var(--font-mini);
         top:56.9%;
     }
-
+    
     .logo-ig{
         top:68.4%;
     }
-
+    
     .mail-info {
         top:81.5%;
     }
-*/
+} */
+
+    /* Estilos para celulares en modo horizontal */
+/* @media (min-width: 568px) and (orientation: landscape) {
+    .container-tv{
+        height: 100vh;
+    }
+    .tv-image {
+        width: 100%;
+        content:url("/assets/images/web\ template\ Tele\ sola.png");
+    }
+    .tv-video {
+        top: 9%;
+        left: 6%;
+        width: 72%;
+        height: 70%;
+    }
+
+    .logo{
+        font-size: 0.6rem;
+        top:91%;
+        left:14%;
+    }
+    
+    .logo-ig{
+        left:48%;
+    }
+    
+    .mail-info {
+        left:73%;
+    }
+} */
+
+    /* Estilos para tabletas en modo vertical */
+/* @media (min-width: 569px) and (orientation: portrait) {
+    .container-tv{
+        height: 90%;
+    }
+    .tv-image {
+        width: 100%;
+        content:url("/assets/images/web\ template\ Tele\ 1024px-RECORTEBORDES.png");
+    }
+    .tv-video {
+        top: 5%;
+        left: 7%;
+        width: 70%;
+        height: 37%;
+    }
+    
+    .logo{
+        font-size: 1.9rem;
+        top:56.8%;
+    }
+    
+    .logo-ig{
+        top:68%;
+    }
+    
+    .mail-info {
+        top:81.2%;
+    }
+} */
+
+    /* Estilos para tablet horizontal y computadoras */
+/* @media (min-width: 1024px){
+    .container-tv{
+        height: 100%;
+    }
+    .tv-image {
+        width: 100%;
+        content:url("/assets/images/web\ template\ Tele\ sola.png");
+    }
+    .tv-video {
+        position: absolute;
+        top: 10%;
+        left: 6.5%;
+        width: 72%;
+        height: 69%;
+    }
+
+    .logo{
+        top: 91%;
+        left: 14.5%;
+        font-size: var(--font-gral);
+    }
+    
+    .logo-ig{
+        left:48%;
+    }
+    
+    .mail-info {
+        left: 72%;
+    }
+} */
 
  /* Estilos para dispositivos muy pequeños */
 @media (max-height: 200px)
